--- a/gemfile
+++ b/gemfile
@@ -1,4 +1,5 @@
-source 'https://rubygems.org'
+# source 'https://rubygems.org'
+source "http://railscamp.local/rubygems"
 
 gem 'slack-ruby-bot'
 gem 'puma'
