--- a/gemfile
+++ b/gemfile
@@ -1,5 +1,4 @@
-# source 'https://rubygems.org'
-source "http://railscamp.local/rubygems"
+source 'https://rubygems.org'
 
 gem 'slack-ruby-bot'
 gem 'puma'
